--- a/portfolio.html
+++ b/portfolio.html
@@ -3,69 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Rene Li</title>
-    <style>
-        li {
-        display: inline;
-        padding-right: 25px;
-        }
-        .btn{
-        border:1px solid #fcd945;
-        color:#b8452f;
-        background-color:#fcd945;
-        }
-        .btn:hover{
-            border:1px solid #fff;
-            color:#b8452f;
-            background-color:#fff;
-        }
-                * {
-          -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-        }
-
-        body { font-family: sans-serif; }
-
-        .gallery {
-          background: #383838;
-        }
-
-        .gallery-cell {
-          width: 60%;
-          height: 400px;
-          margin-right: 0px;
-          background: #383838;
-          //counter-increment: gallery-cell;
-        }
-
-        .gallery-cell a {
-          padding: 0px;
-          margin: 0px;
-        }
-        .gallery img {
-          display: block;
-          height: 400px;
-        }
-
-        /* Slide */
-        .hover05 figure img {
-            margin-left: 300px;
-            -webkit-transform: scale(1);
-            transform: scale(1);
-            -webkit-transition: 0.4s ease-in-out;
-            transition: .4s ease-in-out;
-        }
-        .hover05 figure:hover img {
-            margin-left: 0;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="flickity/flickity.min.css" media="screen">
     <script src="flickity/flickity.pkgd.min.js"></script>
 </head>
 <body bgcolor="#383838" font-family: sans-serif>
-    <div class="left">
-        <div class = "overlay-logo active">
+
+<!-- HOME -->
             <center>
                 <img src = "assets/helloworld.png" height = 50% width = 50%>
             </center>
@@ -84,35 +28,119 @@
                 </a></li>
             </ul>
             </center>
-        </div>
-    </div>
 
- <div align = "center">
+
+<!--END OF HOME -->
+..
+<!-- GALLERY -->
+<!-- PORTFOLIO -->
+<section id="portfolio">
+    <div class="gallery js-flickity" data-flickity-options='{ "imagesLoaded": true, "percentPosition": false, "cellAlign": "left"}'>
+        <div class = "gallery-cell">
+            <div class="hover05">
+                <figure>
+                    <img src="assets/cover.png" alt="fw" />
+                </figure>
+                <span>Hover</span>
+            </div>
+            </div>
+        <div class = "gallery-cell">
+		<!-- nyfw -->
+		<div id="outer-box">
+            <img src="assets/fw.png" alt="fw">
+            <div id="inner-box">
+                <h1>Hues of New York Fashion Week</h1>
+				<p>I used kmeans clustering to find the dominant colors of costumes images and draw color thumbnails for designer collections, this clustering algorithm help me get better color recognization than average color and most frequent color</p>
+                <div class = "automargin"><p> </p></div>
+                <ul>
+                    <li><img src="assets/ck" alt="ck"/></li>
+                    <li><img src="assets/cc.png" alt="cc"/></li>
+                    <li><img src="assets/del.png" alt="del"/></li>
+                </ul>
+
+            </div>
+		</div>
+		</div>
+        <!-- END OF nyfw -->
+
+        <!-- social net -->
+        <div class = "gallery-cell">
+
+		<div id="outer-box">
+            <img src="assets/sw.png" alt="sw">
+            <div id="inner-box">
+                <h1>Classification on Social Network</h1>
+				<p>In my last internship, I did a project about fraud detection within social network. I read papers about label propagation algorithm, which is based on theory of Random Walk on Graph, and implement it in R. Here are two graphs I plotted out, one of them shows cluster of community, the other shows user classification. </p>
+                <div class = "automargin"><p> </p></div>
+                <ul>
+                    <li><img src="assets/2.1.png" alt="sw"/></li>
+                    <li><img src="assets/2.2.png" alt="sw"/></li>
+                </ul>
+            </div>
+		</div>
+            </div>
+		<!-- END OF social net -->
+<!--cpd -->
+        <div class = "gallery-cell">
+		<div id="outer-box">
+            <img src="assets/crime.png" alt="fw">
+            <div id="inner-box">
+                <h1>Analysis of Crimes in Chicago Parks</h1>
+				<p>Last quarter, my course team did a project looking into the relationship between crime and event in surrounding areas of Chicago parks. I contributed time series forecasting and correlation analysis using information entropy.</p>
+                <div class = "automargin"><p> </p></div>
+                <ul>
+                    <li><img src="assets/crimebyevent.png" alt="event"/></li>
+                    <li><img src="assets/timeseriesforecast.png" alt="time"/></li>
+                </ul>
+
+            </div>
+		</div>
+        </div>
+		<!-- END OF cpd -->
+        <!-- powerball -->
+        <div class = "gallery-cell">
+		<div id="outer-box">
+            <img src="assets/powerball.png" alt="fw">
+            <div id="inner-box">
+                <h1>Visualize Odds of Powerball</h1>
+				<p>I was curious about the odds and prizes of powerball, so I download historical data from the official website and made some explanary analysis.</p>
+                <div class = "automargin"><p> </p></div>
+                <ul>
+                    <li><img src="assets/expect.png" alt="expectation"/></li>
+                    <li><img src="assets/map.png" alt="map"/></li>
+                    <li><img src="assets/Rplot.png" alt="win"/></li>
+                </ul>
+
+            </div>
+		</div>
+        </div>
+		<!-- END OF powerball -->
+
+        <!-- aboutme -->
+		<div>
+       <div class = "gallery-cell">
+            <div class="hover05">
+                <figure>
+                    <img src="assets/aboutme.png" alt="fw" />
+                </figure>
+                <span>Hover</span>
+            </div>
+            </div>
+    </div>
+        <!-- END OF about me -->
+</div>
+</section>
+<!-- END OF GALLERY -->
+<div class = "automargin"><p> </p></div>
+<div class = "automargin"><p> </p></div>
+<!-- about me -->
+<div align = "center">
         <a href = "assets/Rene_Resume.pdf">
             <input value ="Resume" class = "btn" type= "submit" style = "width: 150px; height: 30px;">
         </a>
     </div>
-
-    <div class="gallery js-flickity"
-  data-flickity-options='{ "imagesLoaded": true, "percentPosition": false}'>
-        <div class = "gallery-cell">
-            <div class="hover05">
-                <figure>
-                    <img src="assets/fw.png" alt="fw" />
-                </figure>
-                <span>Hover</span>
-            </div>
-
-            </a>
-        </div>
-  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/submerged.jpg" alt="submerged" />
-  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/look-out.jpg" alt="look-out" />
-  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
-  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
-  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
-</div>
-
-
-
+<!-- end of about me -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
